# commonware-restaking-contracts

./: .gitignore  .gitmodules  README.md  docker-compose.yml  example.env
.github/workflows/: docker-image.yml  foundry-tests.yml  integration-test.yml  local-integration-test.yml  rust-tests.yml
app/: .gitignore  Cargo.toml  README.md  docker-compose.yml  example.env
app/config/.nodes/: avs_deploy.json
app/config/.nodes/operator_keys/: testacc1.ecdsa.key.json  testacc1.private.bls.key.json  testacc1.private.ecdsa.key.json  testacc2.ecdsa.key.json  testacc3.bls.key.json  testacc3.ecdsa.key.json  testacc3.private.bls.key.json  testacc3.private.ecdsa.key.json
app/scripts/: Cargo.toml  README.md  router_e2e_local.sh  verify_increments.rs
app/src/: Cargo.toml  lib.rs
app/src/bindings/: Cargo.toml
app/src/bindings/abis/: Counter.json
app/src/bindings/src/: counter.rs  lib.rs
app/src/common/: Cargo.toml
app/src/common/src/: config.rs  lib.rs  network.rs  types.rs  validator.rs
app/src/node/: Cargo.toml  Dockerfile
app/src/node/src/: app.rs
app/src/router/: Cargo.toml  Dockerfile
app/src/router/src/: app.rs  creator.rs  executor.rs  factories.rs  mod.rs  provider.rs
config/.nodes/: avs_deploy.json
config/.nodes/operator_keys/: testacc1.bls.key.json  testacc2.bls.key.json  testacc2.private.bls.key.json  testacc2.private.ecdsa.key.json
contracts/: .gitignore  .gitmodules  foundry.toml
contracts/lib/eigenlayer-middleware/src/unaudited/: BLSSigCheckOperatorStateRetriever.sol
contracts/script/: DeployBLSSigCheck.s.sol
contracts/src/: Counter.sol
script/: Counter.s.sol  DeployAvsServiceManagerWrapper.s.sol  DeployBLSSigCheck.s.sol  DeployCounter.s.sol
scripts/: Cargo.toml  router_e2e_local.sh
src/: AvsServiceManagerWrapper.sol  Counter.sol
src/examples/: Counter.sol
src/interfaces/: IAvsServiceManager.sol
test/: AvsServiceManagerWrapper.t.sol  Counter.t.sol
test/examples/: Counter.t.sol
