[package]
name = "avs-scripts"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "verify_increments"
path = "verify_increments.rs"

[dependencies]
alloy = "1.0"
alloy-provider = "1.0"
commonware-avs-bindings = { path = "../app/src/bindings" }
commonware-avs-core = { git = "https://github.com/BreadchainCoop/commonware-restaking", branch = "remove-counter-example" }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
