[package]
name = "avs-scripts"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "verify_increments"
path = "verify_increments.rs"

[dependencies]
alloy = { workspace = true }
alloy-provider = { workspace = true }
commonware-avs-bindings = { path = "../src/bindings" }
commonware-avs-counter-common = { path = "../src/common" }
dotenv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true, features = ["serde"] }
