[package]
name = "commonware-avs-counter-common"
version = "0.1.0"
edition = "2024"

[lib]
name = "commonware_avs_counter_common"
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
commonware-avs-bindings = { path = "../bindings" }
commonware-avs-core = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
url = { workspace = true }
