[package]
name = "commonware-avs-node-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "commonware-avs-node-app"
path = "src/app.rs"

[dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
commonware-avs-core = { workspace = true }
commonware-avs-counter-common = { path = "../common" }
commonware-avs-node = { workspace = true }
commonware-avs-router = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
dotenv = { workspace = true }
eigen-logging = { workspace = true }
governor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
